# python-pip-module-sample

./: README.md  setup.cfg
py_module_sample/: cli_main.py  world.py
src/: cli_main.py  hello.py
src/world/: world.py
