# READ ME:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = sample-python-module
version = 0.0.1
description = description
long_description = file: README.md
author = gakugaku
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages =
package_dir =
     = src
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    hello-world = cli_main:main

[options.extras_require]
