# READ ME:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = python-pip-smodule-sample
version = 0.0.1
description = description
long_description = file: README.md
author = gakugaku
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
     = py_module_sample
packages =
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    hello-world = cli_main:main

[options.extras_require]
